[package]
name = "stylus-nft"
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/LamprosLabsDAO/NFT-stylus"
repository = "https://github.com/LamprosLabsDAO/NFT-stylus"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus NFT Example"

[dependencies]
alloy-primitives = "0.7.3"
alloy-sol-types = "0.7.3"
mini-alloc = "0.4.2"
stylus-sdk = "0.5.1"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "erc721"
path = "src/main.rs"

[lib]
name = "erc721" 
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
